--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
     - add support for "NULL encryption"
     - add support for "DES3-168 encryption"
     - ensure we only unpack "payload_len" bytes of the payload
+    - use /dev/urandom to create random IV
 
 0.01    - Thu Feb  4 15:34:00 PST 2010
     - initial version
