Note that we've done a bunch of internal cleanups.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     - add support for "DES3-168 encryption"
     - ensure we only unpack "payload_len" bytes of the payload
     - use /dev/urandom to create random IV
+    - internal cleanups/refactorings
 
 0.01    - Thu Feb  4 15:34:00 PST 2010
     - initial version
