New method to check and see if the token needs to be re-authenticated.
Once we're past the "renew-until" timestamp, we should be re-authenticating
the User before automatically reissuing a new token.  Provide a quick way to
check for this.

--- a/Changes
+++ b/Changes
@@ -7,6 +7,8 @@
     - internal cleanups/refactorings
     - *noticably* faster than previous release; several performance
       improvements have been made
+    - new method to check if token requires renewal by re-authenticating the
+      User.
 
 0.01    - Thu Feb  4 15:34:00 PST 2010
     - initial version
