--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-????
+0.02    - Fri Sep 24 12:44:24 PDT 2010
     - add support for "NULL encryption"
     - add support for "DES3-168 encryption"
     - enable support for "AES-256 encryption"
