Add (forgotten) dependency on Moose.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.03    - ???
+    - add (forgotten) dependency on Moose.
 
 0.02    - Fri Sep 24 12:44:24 PDT 2010
     - add support for "NULL encryption"
