Forgot to add datestamp in the Changes file.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.03    - ???
+0.03    - Fri Sep 24 22:10:42 PDT 2010
     - add (forgotten) dependency on Moose.
 
 0.02    - Fri Sep 24 12:44:24 PDT 2010
