--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.04    - ???
+0.04    - Sun Sep 26 21:51:21 PDT 2010
     - add other missing dependencies.  Test::Prereq++
 
 0.03    - Fri Sep 24 22:10:42 PDT 2010
