--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.05    - ???
     - Indicate in docs that C:OTK doesn't support the "obfuscate password"
       option in the OpenToken specification.
+    - Fix serialization bug when dealing with empty/blank values.  Thanks to
+      Travis Spencer for the test case.
 
 0.04    - Sun Sep 26 21:51:21 PDT 2010
     - add other missing dependencies.  Test::Prereq++
