Add a "GitHub Actions" workflow for CI.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl extension Crypt::OpenToken:
 
 {{$NEXT}}
     - Switch to Dist::Zilla
+    - Use GitHub Actions for CI.
 
 0.07    - Tue Feb 28 10:44:26 PST 2012
     - Minor updates to xt/ tests
