Fix POD example for calls to `->new(...)`.
After switching to Moose, we can't use the "single argument" instantiation form
any longer.  And somehow, I forgot to update the POD docs and examples for this
all that time ago.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Crypt::OpenToken:
 
 {{$NEXT}}
+    - Minor POD fixes
 
 0.08      2020-12-28 13:04:13-08:00 America/Vancouver
     - Switch to Dist::Zilla
