Update `Changes` to note that all SYNOPSIS sections pass syntax checks

--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Perl extension Crypt::OpenToken:
     - Minor POD fixes
     - Use namespace::autoclean to ensure all namespaces are clean
     - Cleaned out unused variables
+    - Updated SYNOPSIS sections, so they will pass syntax checks
 
 0.08      2020-12-28 13:04:13-08:00 America/Vancouver
     - Switch to Dist::Zilla
