--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl extension Crypt::OpenToken:
 {{$NEXT}}
     - Disable "compile everything" test, as some dependencies are recommended
       and not required.
+    - Use "done_testing()" instead of planning out number of tests at start
 
 0.09      2020-12-30 20:58:28-08:00 America/Vancouver
     - Minor POD fixes, including spelling corrections
